[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Camera.gd" type="Script" id=1]
[ext_resource path="res://src/QuestList.gd" type="Script" id=2]
[ext_resource path="res://assets/squirrel.png" type="Texture" id=3]
[ext_resource path="res://src/InventoryList.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Intro.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]

[node name="PlayerAndGUI" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_mask = 7
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Player" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
hframes = 3

[node name="PlayerCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.5 )
shape = SubResource( 1 )

[node name="Intro" parent="." instance=ExtResource( 5 )]

[node name="GUI" type="Control" parent="."]
margin_left = -300.0
margin_top = -225.0
margin_right = -260.0
margin_bottom = -185.0

[node name="Columns" type="HBoxContainer" parent="GUI"]
margin_right = 600.0
margin_bottom = 400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestList" type="VBoxContainer" parent="GUI/Columns"]
margin_right = 100.0
margin_bottom = 400.0
rect_min_size = Vector2( 100, 25 )
script = ExtResource( 2 )

[node name="Heading" type="Control" parent="GUI/Columns/QuestList"]
margin_right = 100.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 15 )

[node name="ColorRect" type="ColorRect" parent="GUI/Columns/QuestList/Heading"]
margin_right = 100.0
margin_bottom = 20.0
color = Color( 0.611765, 0.509804, 0.286275, 1 )

[node name="Name" type="Label" parent="GUI/Columns/QuestList/Heading"]
margin_left = 5.0
margin_top = 5.0
margin_right = 73.0
margin_bottom = 14.0
rect_scale = Vector2( 0.8, 0.8 )
custom_colors/font_color = Color( 0.180392, 0.054902, 0, 1 )
text = "My Quests:"

[node name="QuestItem" type="Control" parent="GUI/Columns/QuestList"]
margin_top = 19.0
margin_right = 100.0
margin_bottom = 34.0
rect_min_size = Vector2( 100, 15 )

[node name="ColorRect" type="ColorRect" parent="GUI/Columns/QuestList/QuestItem"]
margin_right = 100.0
margin_bottom = 20.0
color = Color( 0.721569, 0.6, 0.341176, 1 )

[node name="Name" type="Label" parent="GUI/Columns/QuestList/QuestItem"]
margin_left = 10.0
margin_top = 5.0
margin_right = 78.0
margin_bottom = 31.0
rect_scale = Vector2( 0.8, 0.8 )
custom_colors/font_color = Color( 0.180392, 0.054902, 0, 1 )
text = "Test of Faith
"

[node name="Spacer" type="Control" parent="GUI/Columns"]
margin_left = 104.0
margin_right = 494.0
margin_bottom = 400.0
rect_min_size = Vector2( 390, 0 )

[node name="InventoryList" type="VBoxContainer" parent="GUI/Columns"]
margin_left = 498.0
margin_right = 598.0
margin_bottom = 400.0
rect_min_size = Vector2( 100, 25 )
script = ExtResource( 4 )

[node name="Heading" type="Control" parent="GUI/Columns/InventoryList"]
margin_right = 100.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 15 )

[node name="ColorRect" type="ColorRect" parent="GUI/Columns/InventoryList/Heading"]
margin_right = 100.0
margin_bottom = 20.0
color = Color( 0.0117647, 0.407843, 0.00784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="GUI/Columns/InventoryList/Heading"]
margin_left = 5.0
margin_top = 5.0
margin_right = 73.0
margin_bottom = 14.0
rect_scale = Vector2( 0.8, 0.8 )
custom_colors/font_color = Color( 0.909804, 1, 0.831373, 1 )
text = "Found"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryItem" type="Control" parent="GUI/Columns/InventoryList"]
margin_top = 19.0
margin_right = 100.0
margin_bottom = 34.0
rect_min_size = Vector2( 100, 15 )

[node name="ColorRect" type="ColorRect" parent="GUI/Columns/InventoryList/InventoryItem"]
margin_right = 100.0
margin_bottom = 20.0
color = Color( 0.313726, 0.690196, 0.270588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="GUI/Columns/InventoryList/InventoryItem"]
margin_left = 5.0
margin_top = 5.0
margin_right = 73.0
rect_scale = Vector2( 0.8, 0.8 )
custom_colors/font_color = Color( 0.219608, 0.4, 0.0588235, 1 )
text = "Found"
__meta__ = {
"_edit_use_anchors_": false
}
